# source1.5

./: .gitignore
.claude/: settings.local.json
.claude/agents/: critical-bug-hunter.md
.github/workflows/: build-windows.yml
docs/: CHECKLIST.md  CI_FIXES.md  COLOR_GRADING_GUIDE.md  DAY_1_COMPLETE.md  DAY_2_COMPLETE.md  DAY_3_COMPLETE.md  DAY_3_EXTENDED.md  DAY_5_EXTENDED_SESSION.md  DAY_5_SSAO_INTEGRATION.md  PBR_SHADER_FOUNDATION.md  SSAO_INTEGRATION.md
scripts/: README.md  fetch_golden_content.py  parity_config_example.json  parity_test.py
src/framework/: color_grading.cpp  color_grading.h
src/game/client/tf/: tf_rendertargets.cpp  tf_rendertargets.h
src/materialsystem/stdshaders/: common_ps_fxc.h  lightmappedgeneric_dx9_helper.cpp  pbr_dx9.cpp  pbr_helper.h  pbr_ps20b.fxc  pbr_vs20.fxc  ssao_blur_dx9.cpp  ssao_blur_ps20b.fxc  ssao_dx9.cpp  ssao_ps20b.fxc
tests/: CMakeLists.txt  test_color_grading.cpp
